// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services data All service summary for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "service_summary": Object {
          "id": "136",
          "service_channels_summary": Array [
            Object {
              "channel_id": "other_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 117966,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "other_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 118025,
              "subject_id": "136",
              "year": "2023",
            },
          ],
          "service_digital_status_summary": Array [
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "issue_res_digital",
              "key_desc": "issue_res_digital_desc",
              "not_applicable": 0,
              "subject_id": "136",
            },
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "issuance_digital",
              "key_desc": "issuance_digital_desc",
              "not_applicable": 0,
              "subject_id": "136",
            },
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "decision_digital",
              "key_desc": "decision_digital_desc",
              "not_applicable": 0,
              "subject_id": "136",
            },
            Object {
              "can_online": 1,
              "cannot_online": 0,
              "key": "application_digital",
              "key_desc": "application_digital_desc",
              "not_applicable": 0,
              "subject_id": "136",
            },
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "authentication",
              "key_desc": "authentication_desc",
              "not_applicable": 0,
              "subject_id": "136",
            },
            Object {
              "can_online": 1,
              "cannot_online": 0,
              "key": "account_reg_digital",
              "key_desc": "account_reg_digital_desc",
              "not_applicable": 0,
              "subject_id": "136",
            },
          ],
          "service_general_stats": Object {
            "num_of_programs_offering_services": 1,
            "num_of_subject_offering_services": null,
            "number_of_online_enabled_services": 0,
            "number_of_services": 1,
            "report_years": Array [
              "2023",
              "2022",
            ],
            "standard_years": Array [
              "2023",
              "2022",
            ],
          },
          "service_standards_summary": Array [
            Object {
              "met_standards_count": 2,
              "services_w_standards_count": 1,
              "standards_count": 2,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "met_standards_count": null,
              "services_w_standards_count": 1,
              "standards_count": 1,
              "subject_id": "136",
              "year": "2022",
            },
          ],
          "subject_offering_services_summary": Array [
            Object {
              "number_of_services": 1,
              "subject_id": "GSC-BVY08",
              "total_volume": 118025,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`services data All service summary for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "service_summary": Object {
          "id": "GSC-BVY08",
          "service_channels_summary": Array [
            Object {
              "channel_id": "other_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 117966,
              "subject_id": "136",
              "year": "2022",
            },
            Object {
              "channel_id": "other_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "phone_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "live_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "mail_application_count",
              "channel_value": 0,
              "subject_id": "136",
              "year": "2023",
            },
            Object {
              "channel_id": "online_application_count",
              "channel_value": 118025,
              "subject_id": "136",
              "year": "2023",
            },
          ],
          "service_digital_status_summary": Array [
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "issue_res_digital",
              "key_desc": "issue_res_digital_desc",
              "not_applicable": 0,
              "subject_id": "GSC-BVY08",
            },
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "issuance_digital",
              "key_desc": "issuance_digital_desc",
              "not_applicable": 0,
              "subject_id": "GSC-BVY08",
            },
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "decision_digital",
              "key_desc": "decision_digital_desc",
              "not_applicable": 0,
              "subject_id": "GSC-BVY08",
            },
            Object {
              "can_online": 1,
              "cannot_online": 0,
              "key": "application_digital",
              "key_desc": "application_digital_desc",
              "not_applicable": 0,
              "subject_id": "GSC-BVY08",
            },
            Object {
              "can_online": 0,
              "cannot_online": 1,
              "key": "authentication",
              "key_desc": "authentication_desc",
              "not_applicable": 0,
              "subject_id": "GSC-BVY08",
            },
            Object {
              "can_online": 1,
              "cannot_online": 0,
              "key": "account_reg_digital",
              "key_desc": "account_reg_digital_desc",
              "not_applicable": 0,
              "subject_id": "GSC-BVY08",
            },
          ],
          "service_general_stats": Object {
            "num_of_programs_offering_services": null,
            "num_of_subject_offering_services": null,
            "number_of_online_enabled_services": 0,
            "number_of_services": 1,
            "report_years": Array [
              "2023",
              "2022",
            ],
            "standard_years": Array [
              "2023",
              "2022",
            ],
          },
          "service_standards_summary": Array [
            Object {
              "met_standards_count": 2,
              "services_w_standards_count": 1,
              "standards_count": 2,
              "subject_id": "GSC-BVY08",
              "year": "2023",
            },
            Object {
              "met_standards_count": null,
              "services_w_standards_count": 1,
              "standards_count": 1,
              "subject_id": "GSC-BVY08",
              "year": "2022",
            },
          ],
          "subject_offering_services_summary": null,
        },
      },
    },
  },
}
`;

exports[`services data All services and standards for org 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "services": Array [
          Object {
            "accessibility_assessors": null,
            "account_reg_digital_status": true,
            "application_digital_status": true,
            "authentication_status": false,
            "collects_fees": false,
            "decision_digital_status": false,
            "description": "The Contract Security Program (CSP) contributes to the government's national security agenda and safeguards Canadian and foreign governments' sensitive information and assets entrusted to private sector companies or individuals when under government contract. In this context, it is responsible for evaluating and granting security clearance requests from industry. On behalf of the Government of Canada, the program negotiates, concludes and administers international bilateral security instruments concerning industrial security and defence with foreign governments and international organizations to open new markets to Canadian industries in the domain of classified information and assets, and to support cooperative defence relationships. contract. In this context, it is responsible for evaluating and granting security clearance requests from industry. On behalf of the Government of Canada, the program negotiates, concludes and administers international bilateral security instrument concerning industrial security and defence with foreign governments and international organizations to open new markets to Canadian industries in the domain of classified information and assets, and to support cooperative defence relationships.",
            "designations": Array [],
            "digital_enablement_comment": "Not applicable",
            "digital_identity_platforms": Array [],
            "feedback_channels": Array [
              "Email",
              "Telephone",
            ],
            "first_active_year": null,
            "id": "938",
            "is_active": true,
            "issuance_digital_status": false,
            "issue_res_digital_status": false,
            "last_accessibility_review": null,
            "last_active_year": null,
            "last_gender_analysis": null,
            "last_improve_from_feedback": "2021",
            "name": "Contract Security (Company Registration, Personal Security Screening, Call Centre)",
            "org": Object {
              "name": "Public Services and Procurement Canada",
            },
            "org_id": "136",
            "program_activity_codes": Array [
              "GSC-BVY08",
            ],
            "programs": Array [
              Object {
                "name": "Security and Oversight Services",
              },
            ],
            "recipient_type": Array [
              "Targeted, Client-based Services",
            ],
            "report_years": Array [
              "2023",
              "2022",
            ],
            "service_report": Array [
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": 117966,
                "online_inquiry_count": 563433,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": 0,
                "phone_inquiry_count": 31486,
                "service_id": "938",
                "service_report_comment": "CSP met most of its service standards except for the responding time to the client inquiries.",
                "sin_collected": false,
                "year": "2022",
              },
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": 118025,
                "online_inquiry_count": 596260,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": 26010,
                "service_id": "938",
                "service_report_comment": "CSP met most of its service standards except for the responding time to the client inquiries.",
                "sin_collected": false,
                "year": "2023",
              },
            ],
            "service_scope": Array [
              "Internal Cluster Service",
              "Internal Enterprise Service",
              "External Service",
            ],
            "service_type": Array [
              "Agreements, Permissions, Inspections, Rulings",
            ],
            "standards": Array [
              Object {
                "channel": "Email",
                "first_active_year": null,
                "last_active_year": null,
                "last_gcss_tool_year": "2022",
                "name": "Respond inquiries within 2 business days.",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "938",
                "standard_id": "1140",
                "standard_report": Array [
                  Object {
                    "count": 83249,
                    "is_target_met": null,
                    "lower": 90,
                    "met_count": 53536,
                    "standard_comment": "The Client Service Centre has been unable to meet the 90% target as a result of lack of resources to address the inquiries as well as persisting volumes of complex inquiries as a result of numerous program/policies changes.",
                    "standard_id": "1140",
                    "upper": null,
                    "year": "2022",
                  },
                ],
                "standard_urls": Array [
                  null,
                ],
                "submission_year": "2022",
                "target_type": null,
                "type": "Timeliness",
              },
              Object {
                "channel": "Online",
                "first_active_year": null,
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Process a simple request for security clearance (to access classified information and assets) within 75 business days",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "938",
                "standard_id": "727",
                "standard_report": Array [
                  Object {
                    "count": 21029,
                    "is_target_met": true,
                    "lower": 80,
                    "met_count": 19218,
                    "standard_comment": null,
                    "standard_id": "727",
                    "upper": null,
                    "year": "2023",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2023",
                "target_type": null,
                "type": "Timeliness",
              },
              Object {
                "channel": "Online",
                "first_active_year": null,
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Process a complex request for security clearance (to access Classified information and assets) within 120 business days.",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "938",
                "standard_id": "728",
                "standard_report": Array [
                  Object {
                    "count": 12119,
                    "is_target_met": true,
                    "lower": 80,
                    "met_count": 10150,
                    "standard_comment": null,
                    "standard_id": "728",
                    "upper": null,
                    "year": "2023",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2023",
                "target_type": null,
                "type": "Timeliness",
              },
            ],
            "subject_type": "service",
            "submission_year": "2023",
            "target_groups_name": Array [
              "Economic Segments (Businesses)",
              "Internal to Government",
            ],
            "urls": Array [
              null,
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`services data All services and standards for program 1`] = `
Object {
  "data": Object {
    "root": Object {
      "program": Object {
        "services": Array [
          Object {
            "accessibility_assessors": null,
            "account_reg_digital_status": true,
            "application_digital_status": true,
            "authentication_status": false,
            "collects_fees": false,
            "decision_digital_status": false,
            "description": "The Contract Security Program (CSP) contributes to the government's national security agenda and safeguards Canadian and foreign governments' sensitive information and assets entrusted to private sector companies or individuals when under government contract. In this context, it is responsible for evaluating and granting security clearance requests from industry. On behalf of the Government of Canada, the program negotiates, concludes and administers international bilateral security instruments concerning industrial security and defence with foreign governments and international organizations to open new markets to Canadian industries in the domain of classified information and assets, and to support cooperative defence relationships. contract. In this context, it is responsible for evaluating and granting security clearance requests from industry. On behalf of the Government of Canada, the program negotiates, concludes and administers international bilateral security instrument concerning industrial security and defence with foreign governments and international organizations to open new markets to Canadian industries in the domain of classified information and assets, and to support cooperative defence relationships.",
            "designations": Array [],
            "digital_enablement_comment": "Not applicable",
            "digital_identity_platforms": Array [],
            "feedback_channels": Array [
              "Email",
              "Telephone",
            ],
            "first_active_year": null,
            "id": "938",
            "is_active": true,
            "issuance_digital_status": false,
            "issue_res_digital_status": false,
            "last_accessibility_review": null,
            "last_active_year": null,
            "last_gender_analysis": null,
            "last_improve_from_feedback": "2021",
            "name": "Contract Security (Company Registration, Personal Security Screening, Call Centre)",
            "org": Object {
              "name": "Public Services and Procurement Canada",
            },
            "org_id": "136",
            "program_activity_codes": Array [
              "GSC-BVY08",
            ],
            "programs": Array [
              Object {
                "name": "Security and Oversight Services",
              },
            ],
            "recipient_type": Array [
              "Targeted, Client-based Services",
            ],
            "report_years": Array [
              "2023",
              "2022",
            ],
            "service_report": Array [
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": 117966,
                "online_inquiry_count": 563433,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": 0,
                "phone_inquiry_count": 31486,
                "service_id": "938",
                "service_report_comment": "CSP met most of its service standards except for the responding time to the client inquiries.",
                "sin_collected": false,
                "year": "2022",
              },
              Object {
                "cra_business_ids_collected": false,
                "email_application_count": null,
                "fax_application_count": null,
                "live_application_count": null,
                "mail_application_count": null,
                "online_application_count": 118025,
                "online_inquiry_count": 596260,
                "other_application_count": null,
                "phone_application_count": null,
                "phone_inquiry_and_application_count": null,
                "phone_inquiry_count": 26010,
                "service_id": "938",
                "service_report_comment": "CSP met most of its service standards except for the responding time to the client inquiries.",
                "sin_collected": false,
                "year": "2023",
              },
            ],
            "service_scope": Array [
              "Internal Cluster Service",
              "Internal Enterprise Service",
              "External Service",
            ],
            "service_type": Array [
              "Agreements, Permissions, Inspections, Rulings",
            ],
            "standards": Array [
              Object {
                "channel": "Email",
                "first_active_year": null,
                "last_active_year": null,
                "last_gcss_tool_year": "2022",
                "name": "Respond inquiries within 2 business days.",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "938",
                "standard_id": "1140",
                "standard_report": Array [
                  Object {
                    "count": 83249,
                    "is_target_met": null,
                    "lower": 90,
                    "met_count": 53536,
                    "standard_comment": "The Client Service Centre has been unable to meet the 90% target as a result of lack of resources to address the inquiries as well as persisting volumes of complex inquiries as a result of numerous program/policies changes.",
                    "standard_id": "1140",
                    "upper": null,
                    "year": "2022",
                  },
                ],
                "standard_urls": Array [
                  null,
                ],
                "submission_year": "2022",
                "target_type": null,
                "type": "Timeliness",
              },
              Object {
                "channel": "Online",
                "first_active_year": null,
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Process a simple request for security clearance (to access classified information and assets) within 75 business days",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "938",
                "standard_id": "727",
                "standard_report": Array [
                  Object {
                    "count": 21029,
                    "is_target_met": true,
                    "lower": 80,
                    "met_count": 19218,
                    "standard_comment": null,
                    "standard_id": "727",
                    "upper": null,
                    "year": "2023",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2023",
                "target_type": null,
                "type": "Timeliness",
              },
              Object {
                "channel": "Online",
                "first_active_year": null,
                "last_active_year": null,
                "last_gcss_tool_year": null,
                "name": "Process a complex request for security clearance (to access Classified information and assets) within 120 business days.",
                "other_type_comment": null,
                "rtp_urls": Array [],
                "service_id": "938",
                "standard_id": "728",
                "standard_report": Array [
                  Object {
                    "count": 12119,
                    "is_target_met": true,
                    "lower": 80,
                    "met_count": 10150,
                    "standard_comment": null,
                    "standard_id": "728",
                    "upper": null,
                    "year": "2023",
                  },
                ],
                "standard_urls": Array [],
                "submission_year": "2023",
                "target_type": null,
                "type": "Timeliness",
              },
            ],
            "subject_type": "service",
            "submission_year": "2023",
            "target_groups_name": Array [
              "Economic Segments (Businesses)",
              "Internal to Government",
            ],
            "urls": Array [
              null,
            ],
          },
        ],
      },
    },
  },
}
`;

exports[`services data Searching services by name 1`] = `
Array [
  Object {
    "data": Object {
      "en_root": Object {
        "search_by_english_word": Array [
          Object {
            "id": "938",
            "name": "Contract Security (Company Registration, Personal Security Screening, Call Centre)",
          },
        ],
        "search_by_french_word": Array [],
      },
    },
  },
  Object {
    "data": Object {
      "fr_root": Object {
        "diacritical_free_search": Array [
          Object {
            "id": "938",
            "name": "Sécurité des contrats (enregistrement d'une entreprise, filtrage de la  sécurité du personnel, centre d'appels)",
          },
        ],
        "diacritical_search": Array [
          Object {
            "id": "938",
            "name": "Sécurité des contrats (enregistrement d'une entreprise, filtrage de la  sécurité du personnel, centre d'appels)",
          },
        ],
        "multi_word_search": Array [
          Object {
            "id": "938",
            "name": "Sécurité des contrats (enregistrement d'une entreprise, filtrage de la  sécurité du personnel, centre d'appels)",
          },
        ],
        "partial_word_search": Array [
          Object {
            "id": "938",
            "name": "Sécurité des contrats (enregistrement d'une entreprise, filtrage de la  sécurité du personnel, centre d'appels)",
          },
        ],
      },
    },
  },
]
`;

exports[`services data Single service 1`] = `
Object {
  "data": Object {
    "root": Object {
      "service": Object {
        "accessibility_assessors": null,
        "account_reg_digital_status": true,
        "application_digital_status": true,
        "authentication_status": false,
        "collects_fees": false,
        "decision_digital_status": false,
        "description": "The Contract Security Program (CSP) contributes to the government's national security agenda and safeguards Canadian and foreign governments' sensitive information and assets entrusted to private sector companies or individuals when under government contract. In this context, it is responsible for evaluating and granting security clearance requests from industry. On behalf of the Government of Canada, the program negotiates, concludes and administers international bilateral security instruments concerning industrial security and defence with foreign governments and international organizations to open new markets to Canadian industries in the domain of classified information and assets, and to support cooperative defence relationships. contract. In this context, it is responsible for evaluating and granting security clearance requests from industry. On behalf of the Government of Canada, the program negotiates, concludes and administers international bilateral security instrument concerning industrial security and defence with foreign governments and international organizations to open new markets to Canadian industries in the domain of classified information and assets, and to support cooperative defence relationships.",
        "designations": Array [],
        "digital_enablement_comment": "Not applicable",
        "digital_identity_platforms": Array [],
        "feedback_channels": Array [
          "Email",
          "Telephone",
        ],
        "first_active_year": null,
        "id": "938",
        "is_active": true,
        "issuance_digital_status": false,
        "issue_res_digital_status": false,
        "last_accessibility_review": null,
        "last_active_year": null,
        "last_gender_analysis": null,
        "last_improve_from_feedback": "2021",
        "name": "Contract Security (Company Registration, Personal Security Screening, Call Centre)",
        "org": Object {
          "name": "Public Services and Procurement Canada",
        },
        "org_id": "136",
        "program_activity_codes": Array [
          "GSC-BVY08",
        ],
        "programs": Array [
          Object {
            "name": "Security and Oversight Services",
          },
        ],
        "recipient_type": Array [
          "Targeted, Client-based Services",
        ],
        "report_years": Array [
          "2023",
          "2022",
        ],
        "service_report": Array [
          Object {
            "cra_business_ids_collected": false,
            "email_application_count": null,
            "fax_application_count": null,
            "live_application_count": null,
            "mail_application_count": null,
            "online_application_count": 117966,
            "online_inquiry_count": 563433,
            "other_application_count": null,
            "phone_application_count": null,
            "phone_inquiry_and_application_count": 0,
            "phone_inquiry_count": 31486,
            "service_id": "938",
            "service_report_comment": "CSP met most of its service standards except for the responding time to the client inquiries.",
            "sin_collected": false,
            "year": "2022",
          },
          Object {
            "cra_business_ids_collected": false,
            "email_application_count": null,
            "fax_application_count": null,
            "live_application_count": null,
            "mail_application_count": null,
            "online_application_count": 118025,
            "online_inquiry_count": 596260,
            "other_application_count": null,
            "phone_application_count": null,
            "phone_inquiry_and_application_count": null,
            "phone_inquiry_count": 26010,
            "service_id": "938",
            "service_report_comment": "CSP met most of its service standards except for the responding time to the client inquiries.",
            "sin_collected": false,
            "year": "2023",
          },
        ],
        "service_scope": Array [
          "Internal Cluster Service",
          "Internal Enterprise Service",
          "External Service",
        ],
        "service_type": Array [
          "Agreements, Permissions, Inspections, Rulings",
        ],
        "standards": Array [
          Object {
            "channel": "Email",
            "first_active_year": null,
            "last_active_year": null,
            "last_gcss_tool_year": "2022",
            "name": "Respond inquiries within 2 business days.",
            "other_type_comment": null,
            "rtp_urls": Array [],
            "service_id": "938",
            "standard_id": "1140",
            "standard_report": Array [
              Object {
                "count": 83249,
                "is_target_met": null,
                "lower": 90,
                "met_count": 53536,
                "standard_comment": "The Client Service Centre has been unable to meet the 90% target as a result of lack of resources to address the inquiries as well as persisting volumes of complex inquiries as a result of numerous program/policies changes.",
                "standard_id": "1140",
                "upper": null,
                "year": "2022",
              },
            ],
            "standard_urls": Array [
              null,
            ],
            "submission_year": "2022",
            "target_type": null,
            "type": "Timeliness",
          },
          Object {
            "channel": "Online",
            "first_active_year": null,
            "last_active_year": null,
            "last_gcss_tool_year": null,
            "name": "Process a simple request for security clearance (to access classified information and assets) within 75 business days",
            "other_type_comment": null,
            "rtp_urls": Array [],
            "service_id": "938",
            "standard_id": "727",
            "standard_report": Array [
              Object {
                "count": 21029,
                "is_target_met": true,
                "lower": 80,
                "met_count": 19218,
                "standard_comment": null,
                "standard_id": "727",
                "upper": null,
                "year": "2023",
              },
            ],
            "standard_urls": Array [],
            "submission_year": "2023",
            "target_type": null,
            "type": "Timeliness",
          },
          Object {
            "channel": "Online",
            "first_active_year": null,
            "last_active_year": null,
            "last_gcss_tool_year": null,
            "name": "Process a complex request for security clearance (to access Classified information and assets) within 120 business days.",
            "other_type_comment": null,
            "rtp_urls": Array [],
            "service_id": "938",
            "standard_id": "728",
            "standard_report": Array [
              Object {
                "count": 12119,
                "is_target_met": true,
                "lower": 80,
                "met_count": 10150,
                "standard_comment": null,
                "standard_id": "728",
                "upper": null,
                "year": "2023",
              },
            ],
            "standard_urls": Array [],
            "submission_year": "2023",
            "target_type": null,
            "type": "Timeliness",
          },
        ],
        "subject_type": "service",
        "submission_year": "2023",
        "target_groups_name": Array [
          "Economic Segments (Businesses)",
          "Internal to Government",
        ],
        "urls": Array [
          null,
        ],
      },
    },
  },
}
`;
